--- a/index.html
+++ b/index.html
@@ -715,14 +715,6 @@ body {
   }
 
   loadFrames();
-
-<div id="groupsList"></div>
-<button id="addGroupBtn" style="margin-top:15px; padding:10px 15px; background:green; color:white; border:none; cursor:pointer;">Add Group</button>
-
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
 <script>
   // Firebase config
   const firebaseConfig = {
@@ -750,6 +742,7 @@ body {
     window.location.href = "join.html";
   });
 
+  // Helper to generate color
   function stringToColor(str) {
     let hash = 0;
     for (let i = 0; i < str.length; i++) {
@@ -759,9 +752,9 @@ body {
     return "#" + "00000".substring(0, 6 - c.length) + c;
   }
 
+  // Load and display groups
   async function loadGroups() {
     groupsList.innerHTML = '<div class="loading">Loading groups...</div>';
-
     try {
       const snapshot = await db.collection("Groups")
         .orderBy("timestamp", "desc")
@@ -774,7 +767,6 @@ body {
       }
 
       groupsList.innerHTML = "";
-
       snapshot.forEach(doc => {
         const g = doc.data();
         const color = stringToColor(g.name);
@@ -814,20 +806,20 @@ body {
     }
   });
 
-  // Check if user is admin
+  // Listen for login state
   auth.onAuthStateChanged(user => {
     if (user && adminEmails.includes(user.email)) {
       isAdmin = true;
     } else {
       isAdmin = false;
     }
-    loadGroups();
+    loadGroups(); // Reload groups whenever auth state changes
   });
 
-  document.addEventListener("DOMContentLoaded", loadGroups);
+  // Initial load
+  loadGroups();
 </script>
-
-  <footer>
+ <footer>
     <div class="footer-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
