--- a/index.html
+++ b/index.html
@@ -828,7 +828,15 @@ body {
       <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
     </div>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+    
+    <div class="social-links">
+      <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      <a href="#" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    </div>
+    
+    <p class="copyright">© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
