--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,71 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact JokerLudo - Ludo WhatsApp Group Support</title>
-  <meta name="description" content="Contact JokerLudo support for help with Ludo WhatsApp groups, payment issues, or group joining problems. Fast response via WhatsApp or email." />
-  <meta name="keywords" content="jokerludo contact, ludo support, whatsapp group help, ludo payment issue, join ludo group problem" />
+   <!-- SEO Meta Tags -->
+  <!-- SEO Meta Tags -->
+<meta name="description" content="Join verified Ludo WhatsApp group links on Joker Ludo. Play Ludo King, Ludo Star, Yalla Ludo and earn real money daily. Explore Ludo betting WhatsApp groups, Ludo Star coin seller groups, and trusted online Ludo earning groups. Join India's top high-paying Ludo groups with instant withdrawals and secure gameplay. Find Ludo group links, join online Ludo earning games, and play with friends on WhatsApp for fun and cash rewards." />
+
+<meta name="keywords" content="Ludo WhatsApp group link, WhatsApp Ludo group link, Ludo King WhatsApp group link, Ludo betting WhatsApp group, online Ludo group, Ludo Star WhatsApp group link, Kerala Ludo WhatsApp group link, Telugu Ludo WhatsApp group link, jokerludo, earn money Ludo, Ludo group, WhatsApp Ludo group, join Ludo WhatsApp, trusted Ludo groups, verified Ludo WhatsApp links, real cash Ludo group, fastwin Ludo King group, Ludo group link WhatsApp, Ludo game WhatsApp group link, online Ludo game and earn money WhatsApp group link, Ludo group WhatsApp link, Yalla Ludo WhatsApp group link, Ludo Star coin seller WhatsApp group link, Yalla Ludo WhatsApp group link Pakistan, money king, ludo group link, ludo king whatsapp group, whatsapp ludo group, ludo whatsapp group, ludo group whatsapp, ludo groups, ludo king money, money ludo king, ludo king group, whatsapp ludo, ludo betting group, ludo king money game, ludo king real money, how to play ludo king with whatsapp friends, night king ludo, mk king, group ludo, jaipur ludo group, गेम किंग, telegram ludo group, ludo king betting whatsapp group, ludo group rules, leader chakka khelne wala, indian girlfriend whatsapp group joining, sub 4 sub whatsapp group india, techfinz full dp, govt school whatsapp group link, rbse class 12 whatsapp group link, truck transport whatsapp group, dream11 whatsapp group india, roblox mod apk new hungama, women whatsapp number, tamil aunty whatsapp group link kanchipuram, popular front of india whatsapp group link, spice money whatsapp group, patna news whatsapp group link, fiewin whatsapp group link, bihar board 10th whatsapp group links 2023, kolhapur jobs whatsapp group link, kerala whatsapp group link 2023, my11circle bet, online selling whatsapp group link, mazi noakari .com, rss science college whatsapp group link, telugu girl whatsapp group link 2022, bgmi master series 2023 points table day 4, zee 24 taas marathi whatsapp group link, naz trik, ugc whatsapp channel link, king whatsapp download 2022, darshan whatsapp number please, tamil sex aunty whatsapp link, allu arjun whatsapp number real, gayatri art kurti manufacturer, jalna girl whatsapp group link, rajasthani whatsapp group link join, bjp rajasthan whatsapp group link, rich female whatsapp numbers 2023, football whatsapp group names malayalam, white whatsapp joint, yoyo sarkari whatsapp group link, kerala nurse whatsapp group link, tamil aunty whatsapp group link dharmapuri, entendy whatsapp group, tamil aunty whatsapp group join, tamil school girl whatsapp group link join, chennai item whatsapp group link 2022, current affairs telegram group link, cg raipur whatsapp group link, fantasy whatsapp group link, ts vro notification 2023, allu arjun mobile number whatsapp, zain travels goa, youtube channel subscriber group, free fire id giveaway 2023, whatsapp group video call in girls, winzo mod apk 2022, बिहार बोर्ड व्हाट्सएप ग्रुप लिंक 2023, sub 4 sub whatsapp group link 2023, girl group whatsapp join link 2022, blk vs cs dream11 prediction, tamil sex whatsapp group link 2023, hot malayalam whatsapp group names, राजस्थानी गर्ल व्हाट्सप्प ग्रुप लिंक, geeta whatsapp number, make girlfriend whatsapp group link, tamil gay whatsapp group link 2023, para commando whatsapp group link, army girl whatsapp group link, मनोरंजन ग्रुप लिंक व्हाट्सएप, kirana wholesale whatsapp group link, tamil aunty whatsapp group link theni, bank nifty whatsapp group 2023, thirunangai whatsapp group invite link, dream 11 group for private contest, whatsapp comedy app, unacademy neet whatsapp group link, मारवाड़ी व्हाट्सप्प ग्रुप लिंक, indian single girl whatsapp group link 2023, whatsapp status views group girl, ahmedabad wholesale whatsapp group link, anime status whatsapp group, bajrangdal join online, tamil aunty whatsapp group link thanjavur, manipulation whatsapp chat png for picsart editing, bjp whatsapp group 2023, odisha girl whatsapp group link 2023, pattaya girl whatsapp group link, fastwin mod hack apk, indian girl whatsapp join, indian work group live, school girl whatsapp group link join 2023, fastwin colour prediction hack mod apk, telegram math group link, free fire youtuber whatsapp group link, all in one mix group whatsapp group link, telugu whatsapp group link 2023, armaan malik youtuber first wife, indian item whatsapp group link, mppsc whatsapp group, ujjain mahakal whatsapp group link 2022, call girl for friendship whatsapp group link 2023, தமிழ் வாட்ஸாப்ப் குரூப் லிங்க்" />
+
+<meta name="author" content="JokerLudo Group" />
+<meta name="robots" content="index, follow" />
+<meta name="language" content="English" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="theme-color" content="#ffcc00" />
+
   
+  <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+
   <!-- Favicon -->
-  <link rel="icon" href="WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
   
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
+  }
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Add these Firebase scripts to your <head> section -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <!-- Firebase Auth -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <style>
     /* ===== GLOBAL STYLES ===== */
     * {
