--- a/addgroup.html
+++ b/addgroup.html
@@ -256,6 +256,7 @@
       <nav>
         <ul>
           <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="rules.html"><i class="fas fa-users"></i> Rules</a></li>
           <li><a href="join.html"><i class="fas fa-users"></i> Join Groups</a></li>
           <li><a href="addgroup.html"><i class="fas fa-plus-circle"></i> Add Group</a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
